--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>React App</title>
   <script type="text/javascript"
-    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ed8de22d0dd0b60e54f9f891e86c4dcc&libraries=services,clusterer"></script>
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=[KAKAO_MAP_API_KEY]&libraries=services,clusterer"></script>
 </head>
 
 <body>
